force-app/main/default/objects/Sales_Revenue_Forecast__c/Sales_Revenue_Forecast__c.object-meta.xml
<CustomObject>
    <description>Sales Revenue Forecast object which is tied to an Oppty for O2R</description>
    <label>Sales Billing Forecast</label>
    <nameField>
        <label>Billing Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Billing Forecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>