force-app/main/default/objects/Sales_Revenue_Forecast__c/fields/ALM_BU_Forecast__c.field-meta.xml
<CustomField>
    <fullName>ALM_BU_Forecast__c</fullName>
    <label>ALM BU Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>