force-app/main/default/objects/Sales_Revenue_Forecast__c/fields/Billing_Outlook_Total__c.field-meta.xml
<CustomField>
    <fullName>Billing_Outlook_Total__c</fullName>
    <description>#10731 : Book to Bill: Oppty HEADER - Forecast Billing Outlook &amp; Actual Billing Forecast Line Sum
related list view for Sales Billing Forecast does not sum up the Sales Billing Estimates or Updated Billing Outlook so the Implementation Team is manually summing these and comparing actuals to estimates. They are asking that we provide an auto calculation of the Sales Billing Forecast fields and make them visible in the opportunity header.</description>
    <formula>Forecast_Opportunity__r.Billing_Outlook_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Outlook Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>