force-app/main/default/objects/Sales_Revenue_Forecast__c/fields/Forecast_Gap__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Gap__c</fullName>
    <description>Comparing Total Annual Amount and Updated Billing Outlook totals to determine if they are over or under the forecasted amount.</description>
    <formula>Billing_Outlook_Total__c -  Forecast_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It gives the difference of Total Annual Amount and Updated Billing Outlook totals.</inlineHelpText>
    <label>Booked - Forecast Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>