force-app/main/default/objects/Sales_Revenue_Forecast__c/fields/Forecast_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Opportunity__c</fullName>
    <description>Opportunity tied to the Revenue</description>
    <label>Forecast Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Billing Forecast</relationshipLabel>
    <relationshipName>Revenue_Forecast</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>