force-app/main/default/objects/Sales_Revenue_Forecast__c/fields/Forecast_Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Revenue_Date__c</fullName>
    <description>Created this field for selecting Forecast Revenue Month and Forecast Revenue Year in one field. This field is created for GITLAB User Story: 8530 (URL: https://gitlab.com/iron-mountain1/gto/enterprise-platforms/customer-relationship-platform/crm/-/issues/8530)</description>
    <label>Forecast Billing Date</label>
    <type>Date</type>
</CustomField>