force-app/main/default/objects/Sales_Revenue_Forecast__c/fields/Forecast_Revenue_Month_ID__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Revenue_Month_ID__c</fullName>
    <label>Forecast Revenue Month ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month 1</fullName>
            </value>
            <value>
                <fullName>Month 2</fullName>
            </value>
            <value>
                <fullName>Month 3</fullName>
            </value>
            <value>
                <fullName>Month 4</fullName>
            </value>
            <value>
                <fullName>Month 5</fullName>
            </value>
            <value>
                <fullName>Month 6</fullName>
            </value>
            <value>
                <fullName>Month 7</fullName>
            </value>
            <value>
                <fullName>Month 8</fullName>
            </value>
            <value>
                <fullName>Month 9</fullName>
            </value>
            <value>
                <fullName>Month 10</fullName>
            </value>
            <value>
                <fullName>Month 11</fullName>
            </value>
            <value>
                <fullName>Month 12</fullName>
            </value>
            <value>
                <fullName>Did not Revenue</fullName>
            </value>
            <value>
                <fullName>Project Revenue &gt;12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>