force-app/main/default/objects/Sales_Revenue_Forecast__c/fields/Imp_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Imp_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Imp Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Billing_Forecast</relationshipName>
    <type>Lookup</type>
</CustomField>