force-app/main/default/objects/Sales_Revenue_Forecast__c/fields/Sales_Billing_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Billing_Estimate__c</fullName>
    <label>Sales Billing Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>