force-app/main/default/objects/Sales_Revenue_Forecast__c/fields/Updated_Billing_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Updated_Billing_Outlook__c</fullName>
    <description>#15672 : Book to Bill: Update decimal point count on &quot;Updated Billing Outlook&quot;</description>
    <label>Updated Billing Outlook</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>