force-app/main/default/objects/Sales_Revenue_Forecast__c/validationRules/Forecast_Revenue_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Forecast_Revenue_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Forecast_Revenue_Date__c ),
OR(ISPICKVAL( Forecast_Opportunity__r.StageName, &quot;5 - Signed/PO In&quot;),
ISPICKVAL(Forecast_Opportunity__r.StageName, &quot;6 - Setup&quot;),
ISPICKVAL(Forecast_Opportunity__r.StageName, &quot;7 - Closed&quot;)
),
AND(
$Profile.Name &lt;&gt; &apos;IM_Custom Sys Admin&apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;IM_Sales_IMTN&apos;
),
NOT( $Permission.Edit_SBF_Lines_in_Late_Stage_Opp )
)</errorConditionFormula>
    <errorMessage>You cannot edit Sales Billing Forecast lines once an Opportunity has been Won. Need help? Contact your Sales Operations Business Partner.</errorMessage>
</ValidationRule>