force-app/main/default/objects/Sales_Revenue_Forecast__c/validationRules/ForecastBilling_Lines_are_not_delete_add.validationRule-meta.xml
<ValidationRule>
    <fullName>ForecastBilling_Lines_are_not_delete_add</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; (Text(Forecast_Opportunity__r.StageName)=&apos;5 - Signed/PO in&apos; || Text(Forecast_Opportunity__r.StageName)=&apos;6 - Setup &apos; || Text(Forecast_Opportunity__r.StageName)=&apos;7 - Closed &apos; ) &amp;&amp; ($Profile.Name &lt;&gt; &apos;IM_Custom Sys Admin&apos;
 &amp;&amp; $Profile.Name &lt;&gt; &apos;IM_Sales_IMTN&apos;) &amp;&amp; (NOT( $Permission.Edit_SBF_Lines_in_Late_Stage_Opp ))</errorConditionFormula>
    <errorMessage>You cannot edit Sales Billing Forecast lines once an Opportunity has been Won. Need help? Contact your Sales Operations Business Partner.</errorMessage>
</ValidationRule>