force-app/main/default/objects/Sales_Revenue_Forecast__c/validationRules/No_Edit_Permission_on_B2B_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edit_Permission_on_B2B_Fields</fullName>
    <active>true</active>
    <description>#15118 : Book to Bill | Implementation Team: Only IM_Sales_IMTN profile to have edit access to B2B related fields</description>
    <errorConditionFormula>AND(
    NOT( $Setup.HasB2BFieldsEditPermission__c.Has_Edit_Access__c),
    OR(
        AND(
           ISNEW(),
           OR(                  
                  NOT(ISBLANK(Updated_Billing_Outlook__c )),
                  NOT(ISBLANK(TEXT(Delay_Reasons_B2B_Billing_Outlook__c)))                
           )
        ),
        ISCHANGED(Updated_Billing_Outlook__c),
        ISCHANGED(Forecast_Revenue_Date__c),
        ISCHANGED(Delay_Reasons_B2B_Billing_Outlook__c)
    )
)</errorConditionFormula>
    <errorMessage>You do not have edit permission on Forecast Billing Date, Updated Billing Outlook and Delay Reason.</errorMessage>
</ValidationRule>