force-app/main/default/objects/Sales_Revenue_Forecast__c/validationRules/No_Edit_Sales_Billing_Estime_in_Stage5.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edit_Sales_Billing_Estime_in_Stage5</fullName>
    <active>true</active>
    <description>Do not allow users to edit Sales billing estimate when Opportunity is Stage 5, 6 or 7.
US : #12914 : Book to Bill: Validation Rule on Sales Billing Estimate in Stage 5
#24480-: Removed certain profile from bypass logic and applicable for all record type</description>
    <errorConditionFormula>AND(ISCHANGED(Sales_Billing_Estimate__c ), 
 
    OR(ISPICKVAL( Forecast_Opportunity__r.StageName, &quot;5 - Signed/PO In&quot;),
       ISPICKVAL(Forecast_Opportunity__r.StageName, &quot;6 - Setup&quot;),
       ISPICKVAL(Forecast_Opportunity__r.StageName, &quot;7 - Closed&quot;)
    ),
AND(
$Profile.Name &lt;&gt; &apos;IM_Custom Sys Admin&apos;,
$Profile.Name &lt;&gt; &apos;IM_Sales_IMTN&apos;

),
NOT( $Permission.Edit_SBF_Lines_in_Late_Stage_Opp )	   
)</errorConditionFormula>
    <errorDisplayField>Sales_Billing_Estimate__c</errorDisplayField>
    <errorMessage>You cannot edit Sales Billing Forecast lines once an Opportunity has been Won. Need help? Contact your Sales Operations Business Partner.</errorMessage>
</ValidationRule>