force-app/main/default/objects/Sales_Revenue_Forecast__c/validationRules/OnlyOneBillingOutlook.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyOneBillingOutlook</fullName>
    <active>false</active>
    <errorConditionFormula>BillingOutlookCount__c &gt; 1</errorConditionFormula>
    <errorMessage>Only one Billing Outlook can be of Sales Billing forecast. Please update the existing record.</errorMessage>
</ValidationRule>