force-app/main/default/objects/Sales_Revenue_Forecast__c/listViews/Forecasts_Ready_for_Updating.listView-meta.xml
<ListView>
    <fullName>Forecasts_Ready_for_Updating</fullName>
    <columns>NAME</columns>
    <columns>Forecast_Opportunity__c</columns>
    <columns>Forecast_Revenue_Date__c</columns>
    <columns>Sales_Billing_Estimate__c</columns>
    <columns>Actual_Billings__c</columns>
    <columns>Actual_Billing_Total__c</columns>
    <columns>Updated_Billing_Outlook__c</columns>
    <columns>Revenue_Gap__c</columns>
    <columns>Forecast_Gap__c</columns>
    <columns>Delay_Reasons_B2B_Billing_Outlook__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>EUR</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Makis Tsantilas,Anastasios Kostaras,Theodoros Mavrelis,Andreas Hadjiyiakoumis,Andrie Neocleous,Andreas Spanos</value>
    </filters>
    <label>Forecasts Ready for Updating GRC CYP</label>
</ListView>