force-app/main/default/objects/Sales_Revenue_Forecast__c/listViews/My_Forecast.listView-meta.xml
<ListView>
    <fullName>My_Forecast</fullName>
    <columns>NAME</columns>
    <columns>Forecast_Opportunity__c</columns>
    <columns>Forecast_Revenue_Month_ID__c</columns>
    <columns>Forecast_Revenue_Month__c</columns>
    <columns>Forecast_Revenue_Year__c</columns>
    <columns>Sales_Billing_Estimate__c</columns>
    <columns>Actual_Billings__c</columns>
    <columns>Updated_Billing_Outlook__c</columns>
    <columns>Delay_Reasons_B2B_Billing_Outlook__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Forecast</label>
</ListView>