force-app/main/default/objects/Sales_Revenue_Forecast__c/listViews/My_Sales_Billing_Forecast_Records.listView-meta.xml
<ListView>
    <fullName>My_Sales_Billing_Forecast_Records</fullName>
    <columns>NAME</columns>
    <columns>Forecast_Opportunity__c</columns>
    <columns>Forecast_Revenue_Date__c</columns>
    <columns>Sales_Billing_Estimate__c</columns>
    <columns>Updated_Billing_Outlook__c</columns>
    <columns>Actual_Billings__c</columns>
    <columns>Delay_Reasons_B2B_Billing_Outlook__c</columns>
    <columns>Comments__c</columns>
    <columns>Imp_Assigned_Formula__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Sales Billing Forecast Records</label>
</ListView>