force-app/main/default/objects/Sales_Revenue_Forecast__c/listViews/Today_s_Forecast_Records.listView-meta.xml
<ListView>
    <fullName>Today_s_Forecast_Records</fullName>
    <columns>NAME</columns>
    <columns>Forecast_Opportunity__c</columns>
    <columns>Forecast_Revenue_Month_ID__c</columns>
    <columns>Sales_Billing_Estimate__c</columns>
    <columns>Actual_Billings__c</columns>
    <columns>Actual_Billing_Total__c</columns>
    <columns>Updated_Billing_Outlook__c</columns>
    <columns>Revenue_Gap__c</columns>
    <columns>Forecast_Gap__c</columns>
    <columns>Delay_Reasons_B2B_Billing_Outlook__c</columns>
    <columns>Comments__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>USD</value>
    </filters>
    <label>Today&apos;s Forecast Records</label>
</ListView>