force-app/main/default/objects/Sales_Revenue_Forecast__c/listViews/vijay1.listView-meta.xml
<ListView>
    <fullName>vijay1</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>vijay</label>
</ListView>