force-app/main/default/objects/Sales_Revenue_Forecast__c/listViews/Vijay2.listView-meta.xml
<ListView>
    <fullName>Vijay2</fullName>
    <columns>Forecast_Revenue_Date__c</columns>
    <columns>NAME</columns>
    <columns>Forecast_Opportunity__c</columns>
    <columns>Sales_Billing_Estimate__c</columns>
    <columns>Updated_Billing_Outlook__c</columns>
    <columns>Actual_Billings__c</columns>
    <columns>Delay_Reasons_B2B_Billing_Outlook__c</columns>
    <columns>Comments__c</columns>
    <columns>Forecast_Gap__c</columns>
    <columns>Imp_Assigned__c</columns>
    <columns>Actual_Billing_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Imp_Assigned_Formula__c</field>
        <operation>equals</operation>
        <value>vijaya kumar</value>
    </filters>
    <label>Vijay</label>
</ListView>